[package]
name = "cuttlefish-backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
infinitable = "1.5.0"
itertools = "0.11.0"
priority-queue = "1.3.2"
rusqlite = "0.30.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
rand = "0.8.5"
